--- a/kubernetes/petclinic.yaml
+++ b/kubernetes/petclinic.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: petclinic
-  replicas: 1 
+  replicas: 5
   template: 
     metadata:
       labels:
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: petclinic
-        image: kalashpalwanda/demo:latest
+        image: yellaiah225/demo
         ports:
         - containerPort: 8080
         imagePullPolicy: Always
